--- a/build-docker-compose.yml
+++ b/build-docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - ./order:/usr/src
       - ./maven-repo:/root/.m2
       
-  delivery:
+  payment:
     depends_on: 
       - kafka
     image: adoptopenjdk/maven-openjdk11:latest
@@ -48,7 +48,7 @@ services:
       - 8083:8083
     working_dir: /usr/src
     volumes:
-      - ./delivery:/usr/src
+      - ./payment:/usr/src
       - ./maven-repo:/root/.m2
       
   product:
