--- a/github/workflows/github-action.yml
+++ b/github/workflows/github-action.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build Maven Projects
         run: |
           mvn clean package -f ./order/pom.xml
-          mvn clean package -f ./delivery/pom.xml
+          mvn clean package -f ./payment/pom.xml
           mvn clean package -f ./product/pom.xml
           mvn clean package -f ./sale/pom.xml
 
@@ -44,15 +44,15 @@ jobs:
             ghcr.io/${{ github.repository }}/order:latest
             ghcr.io/${{ github.repository }}/order:${{ github.ref_name }}
             
-      - name: Docker Build and push for Delivery
+      - name: Docker Build and push for Payment
         uses: docker/build-push-action@v4
         with:
-          context: ./delivery
+          context: ./payment
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}/delivery:latest
-            ghcr.io/${{ github.repository }}/delivery:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}/payment:latest
+            ghcr.io/${{ github.repository }}/payment:${{ github.ref_name }}
             
       - name: Docker Build and push for Product
         uses: docker/build-push-action@v4
