--- a/order/kubernetes/deployment.yaml
+++ b/order/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: order
-          image: "user05.azurecr.io/product:latest"
+          image: "user05.azurecr.io/order:latest"
           ports:
             - containerPort: 8080
           readinessProbe:
